--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-test-renderer": "17.0.2",
     "typescript": "^3.7.2"
   },
   "scripts": {
